ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc3
    • Affects Version/s: None
    • Component/s: None
    • Service Arch
    • Fully Compatible
    • ALL
    • v8.0
    • Service Arch 2024-04-29
    • 2
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In BF-19221, all of the recent failures come after the watchdog period is set to 57 ms (here). This is a pretty tight constraint and reproducible in linux by running the test with stress running in the background.

      The 57ms watchdog period is a recent change to address a timeout that occurred in https://jira.mongodb.org/browse/BF-32133. We need to be careful not to re-introduce that issue.

            Assignee:
            Ryan Berryhill
            Reporter:
            Ryan Berryhill
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: