SERVER-89610 Handle change of period in watchdog (#21346)

GitOrigin-RevId: 457d27bc5cf0f3d427f7a35faf93163186595466